--- a/Dockerfile1
+++ b/Dockerfile1
@@ -5,3 +5,15 @@ RUN yum -y update --skip-broken \
     && yum install -y amazon-linux-extras
     
 RUN amazon-linux-extras | grep -i python
+
+
+RUN yum -y groupinstall "Development Tools" \
+    && yum -y install openssl-devel bzip2-devel libffi-devel wget
+
+RUN wget https://www.python.org/ftp/python/3.9.5/Python-3.9.5.tgz \
+    && tar xvf Python-3.9.5.tgz \
+    && cd Python-3.9*/ \
+    && ./configure --enable-optimizations \
+    && make altinstall \
+    && python3.8 --version \
+    && pip -version
