--- a/Dockerfile1
+++ b/Dockerfile1
@@ -14,11 +14,14 @@ RUN wget https://www.python.org/ftp/python/3.9.5/Python-3.9.5.tgz \
     && tar xvf Python-3.9.5.tgz \
     && cd Python-3.9*/ \
     && ./configure --enable-optimizations \
-    && make altinstall \
-    && python --version \
+    && make altinstall
+    
+RUN python --version \
     && python3.9 --version \
-    && pip -version \
-    && sudo update-alternatives --install /usr/bin/python python \
-    && sudo update-alternatives --list | grep python \
-    && python --version \
+    && pip -version
+
+RUN sudo update-alternatives --install /usr/bin/python python \
+    && sudo update-alternatives --list | grep python
+
+RUN python --version \
     && pip -version \
