--- a/Dockerfile1
+++ b/Dockerfile1
@@ -6,8 +6,7 @@ RUN yum -y update --skip-broken \
     
 RUN amazon-linux-extras | grep -i python
 
-RUN python --version \
-    && python -m pip --version
+RUN python --version
 
 RUN yum -y groupinstall "Development Tools" \
     && yum -y install openssl-devel bzip2-devel libffi-devel wget
@@ -18,11 +17,13 @@ RUN wget https://www.python.org/ftp/python/3.9.5/Python-3.9.5.tgz \
     && ./configure --enable-optimizations \
     && make altinstall
     
-RUN python3.9 --version \
-    && python3.9 -m pip --version
+RUN python3.9 --version
 
 RUN update-alternatives --install /usr/bin/python python \
     && update-alternatives --list | grep python
 
-RUN python --version \
+RUN python3.9 --version \
+    && python --version
+
+RUN python3.9 -m pip --version \
     && python -m pip --version
