--- a/Dockerfile1
+++ b/Dockerfile1
@@ -22,4 +22,5 @@ RUN python3.9 --version \
     && python3.9 -m pip --version
 
 RUN python3.9 -m pip install -U pip \
-    && python3.9 -m pip --version
+    && python3.9 -m pip --version \
+    && pip3 -V
