--- a/Dockerfile1
+++ b/Dockerfile1
@@ -17,3 +17,8 @@ RUN python3.9 --version \
 RUN python3.9 -m pip install -U pip \
     && python3.9 -m pip --version \
     && pip3.9 -V
+
+RUN alias python3=python3.9 \
+    && alias pip3=pip3.9 \
+    && python3 --version \
+    && pip3 --version
